--- a/src/main/resources/org/familybudget/familybudget/add-operation-view.fxml
+++ b/src/main/resources/org/familybudget/familybudget/add-operation-view.fxml
@@ -13,7 +13,7 @@
       style="-fx-background-color: #F0F2F5;"
       xmlns="http://javafx.com/javafx/21"
       xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="org.familybudget.familybudget.AddOperationController">
+      fx:controller="org.familybudget.familybudget.Controllers.AddOperationController">
 
     <padding>
         <Insets top="25" right="25" bottom="25" left="25"/>
