--- a/src/main/resources/org/familybudget/familybudget/categories-view.fxml
+++ b/src/main/resources/org/familybudget/familybudget/categories-view.fxml
@@ -12,7 +12,7 @@
       style="-fx-background-color: #F0F2F5;"
       xmlns="http://javafx.com/javafx/21"
       xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="org.familybudget.familybudget.CategoriesController">
+      fx:controller="org.familybudget.familybudget.Controllers.CategoriesController">
 
     <padding>
         <Insets top="20" right="20" bottom="20" left="20"/>
