--- a/src/main/resources/org/familybudget/familybudget/hello-view.fxml
+++ b/src/main/resources/org/familybudget/familybudget/hello-view.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="420" prefWidth="800" spacing="10" style="-fx-background-color: #F0F2F5;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.familybudget.familybudget.LoginController">
+<VBox alignment="CENTER" prefHeight="420" prefWidth="800" spacing="10" style="-fx-background-color: #F0F2F5;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.familybudget.familybudget.Controllers.LoginController">
 
     <padding>
         <Insets bottom="40" left="40" right="40" top="40" />
