--- a/src/main/resources/org/familybudget/familybudget/main-view.fxml
+++ b/src/main/resources/org/familybudget/familybudget/main-view.fxml
@@ -216,6 +216,20 @@
                                -fx-padding: 7 14;
                                -fx-font-size: 13;"
                         text="Аналитика"/>
+
+                <Button fx:id="accountButton"
+                        maxWidth="220"
+                        prefHeight="41"
+                        onAction="#onOpenAccountClick"
+                        graphicTextGap="8"
+                        style="-fx-background-color: #FFFFFF;
+               -fx-background-radius: 999;
+               -fx-text-fill: #333333;
+               -fx-font-weight: bold;
+               -fx-padding: 7 14;
+               -fx-font-size: 13;"
+                        text="Личный кабинет"/>
+
             </VBox>
 
             <Region VBox.vgrow="ALWAYS"/>
