--- a/src/main/resources/org/familybudget/familybudget/account-view.fxml
+++ b/src/main/resources/org/familybudget/familybudget/account-view.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.text.Font?>
 
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Button?>
 <VBox alignment="TOP_CENTER"
       prefHeight="520.0"
       prefWidth="720.0"
@@ -97,6 +98,17 @@
                       style="-fx-background-radius: 12;
                              -fx-border-radius: 12;
                              -fx-border-color: #E0E0E0;"/>
+
+
+            <Button fx:id="removeMemberButton"
+                    text="Удалить выбранного"
+                    onAction="#onRemoveMemberClick"
+                    style="-fx-background-color: #FF4B55;
+               -fx-background-radius: 999;
+               -fx-text-fill: white;
+               -fx-font-weight: bold;
+               -fx-padding: 6 16;
+               -fx-font-size: 12;"/>
 
             <!-- Статус/ошибки -->
             <Label fx:id="statusLabel"
