--- a/src/main/resources/org/familybudget/familybudget/main-view.fxml
+++ b/src/main/resources/org/familybudget/familybudget/main-view.fxml
@@ -230,6 +230,19 @@
                -fx-font-size: 13;"
                         text="Личный кабинет"/>
 
+                <Button fx:id="addTimeOperationButton"
+                        maxWidth="220"
+                        prefHeight="41"
+                        onAction="#onAddTimeOperationClick"
+                        graphicTextGap="8"
+                        style="-fx-background-color: #FFFFFF;
+               -fx-background-radius: 999;
+               -fx-text-fill: #333333;
+               -fx-font-weight: bold;
+               -fx-padding: 7 14;
+               -fx-font-size: 13;"
+                        text="Запланированная трата"/>
+
             </VBox>
 
             <Region VBox.vgrow="ALWAYS"/>
