--- a/src/main/resources/org/familybudget/familybudget/main-view.fxml
+++ b/src/main/resources/org/familybudget/familybudget/main-view.fxml
@@ -241,7 +241,20 @@
                -fx-font-weight: bold;
                -fx-padding: 7 14;
                -fx-font-size: 13;"
-                        text="Запланированная трата"/>
+                        text="Плановые платежи"/>
+
+                <Button fx:id="openPlannedListButton"
+                        maxWidth="220"
+                        prefHeight="41"
+                        onAction="#onOpenPlannedListClick"
+                        text="Список запланированных"
+                        style="-fx-background-color: #FFFFFF;
+               -fx-background-radius: 999;
+               -fx-text-fill: #333333;
+               -fx-font-weight: bold;
+               -fx-padding: 7 14;
+               -fx-font-size: 13;"/>
+
 
             </VBox>
 
