--- a/src/main/resources/org/familybudget/familybudget/main-view.fxml
+++ b/src/main/resources/org/familybudget/familybudget/main-view.fxml
@@ -243,6 +243,19 @@
                -fx-padding: 7 14;
                -fx-font-size: 13;"/>
 
+                <Button fx:id="categoryPlanButton"
+                        maxWidth="220"
+                        prefHeight="41"
+                        onAction="#onOpenCategoryPlanClick"
+                        graphicTextGap="8"
+                        style="-fx-background-color: #FFFFFF;
+               -fx-background-radius: 999;
+               -fx-text-fill: #333333;
+               -fx-font-weight: bold;
+               -fx-padding: 7 14;
+               -fx-font-size: 13;"
+                        text="План по категориям"/>
+
 
             </VBox>
 
