--- a/src/main/resources/org/familybudget/familybudget/add-time-operation-view.fxml
+++ b/src/main/resources/org/familybudget/familybudget/add-time-operation-view.fxml
@@ -31,6 +31,7 @@
                      -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.15), 18, 0, 0, 4);
                      -fx-font-family: 'Segoe UI';">
 
+
             <!-- Заголовок -->
             <Label text="Запланированная трата"
                    style="-fx-text-fill: #222222;">
@@ -46,6 +47,9 @@
 
             <!-- Форма -->
             <VBox spacing="8" prefWidth="380">
+                <ComboBox fx:id="accountComboBox"
+                          promptText="Счёт"
+                          prefWidth="260" />
 
                 <!-- Категория -->
                 <Label text="Категория"
